# gobject-introspection-sample

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
doc/reference/: Makefile.am  sample-docs.sgml
sample/: Makefile.am  greeter.c  greeter.h
